WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312266
[GBM] REGRESSION(
310393@main
): Always use DRM_RDWR when exporting dma-buf FDs for GPU buffer mapping
https://bugs.webkit.org/show_bug.cgi?id=312266
Summary
[GBM] REGRESSION(310393@main): Always use DRM_RDWR when exporting dma-buf FDs...
Nikolas Zimmermann
Reported
2026-04-14 06:35:12 PDT
gbm_bo_get_fd_for_plane() in older Mesa versions does not always pass DRM_RDWR to drmPrimeHandleToFD, which results in FDs that cannot be mmap'd for writing. This silently breaks GPU buffer write operations.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2026-04-14 06:36:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62730
EWS
Comment 2
2026-04-15 00:33:28 PDT
Committed
311266@main
(31dab2d9da5a): <
https://commits.webkit.org/311266@main
> Reviewed commits have been landed. Closing PR #62730 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug