Source/WebCore/platform/graphics/skia/SkiaGPUAtlas.cpp
@@ -123,8 +123,7 @@ bool SkiaGPUAtlas::uploadImages()
     if (auto* gpuBuffer = m_atlasTexture->memoryMappedGPUBuffer()) {
         if (gpuBuffer->isLinear() || gpuBuffer->isVivanteSuperTiled()) {
             auto writeScope = makeGPUBufferWriteScope(*gpuBuffer);
-            if (!writeScope)
-                return false;
+            RELEASE_ASSERT_WITH_MESSAGE(writeScope, "Failed to map GPU buffer for atlas upload");
 
             for (const auto& entry : m_layout->entries()) {
                 if (auto pixels = pixelDataInSRGB(entry.rasterImage))
